# Cosmic-Network

./: .env  .gitignore  db.sqlite3  manage.py  pyproject.toml
app/: forms.py  middleware.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_alter_profile_photo.py  0003_alter_messanger_image_video_photo_music.py
app/templates/app/: add_post.html  base.html  comments.html  edit_profile.html  header.html  home.html  login.html  message.html  profile.html  register.html  search_users.html
astral_network/: manage.py
astral_network/astral_network/: asgi.py  settings.py  urls.py  wsgi.py
astral_network/auth_user/: admin.py  backends.py  forms.py  managers.py  models.py  signals.py  urls.py  utils.py  views.py
astral_network/auth_user/migrations/: 0001_initial.py  0002_alter_authuser_username.py
astral_network/drf_api/: serializers.py  urls.py  views.py
astral_network/interaction_core/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
astral_network/interaction_core/migrations/: 0001_initial.py  0002_alter_music_music.py  0003_friends_status.py  0004_friends_friend_unique_code.py  0005_alter_friends_friend_unique_code.py
astral_network/messenger/: consumers.py  models.py  routing.py  urls.py  views.py
astral_network/messenger/migrations/: 0001_initial.py  0002_remove_message_receiver_alter_message_sender_chat_and_more.py  0003_alter_chat_user1_alter_chat_user2_and_more.py  (+1 more)
astral_network/profile_user/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
cosmic_network/: asgi.py  settings.py  urls.py  wsgi.py
(+37 files in other folders)
